--- a/init.el.org
+++ b/init.el.org
@@ -18,7 +18,7 @@ with Wiegley's [[https://github.com/jwiegley/use-package][use-package]] gizmo.
         user-mail-address "juntunen.kc@gmail.com"
         dropbox-dir       (if (string= system-type "windows-nt")
                               "~/../../Dropbox/"
-                            "~/Dropbox"))
+                            "~/Dropbox/"))
 #+end_src
 * Install packages
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
@@ -207,8 +207,6 @@ I dig helm. I don't care much for ido.
   
 #+end_src
 * Org Mode
-I like the bleeding edge. Heck, I compiled my emacs from git :-)
-[GNU Emacs 25.0.93.2 (x86_64-unknown-linux-gnu, GTK+ Version 3.16.7) of 2016-04-28]
 On org-agenda-files, the documentation says:
 #+begin_quote
 If the value of the variable is not a list but a single file name, then
@@ -218,393 +216,71 @@ agenda file per line.  In this file paths can be given relative to
 are also made.
 #+end_quote
 Maybe I'll do that sometime.
+
+Way down there is =bh-org-mode-file=. The =bh= is for [[http://doc.norang.ca/org-mode.html][Bernt Hansen]].
+The idea is to have a separate org-config, because it's so huge. My
+Emacs loads in only a few seconds without this.
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
-  (use-package org-id)
-  
-  (use-package org-habit)
-  
-  (use-package org-mobile
-    :config
-    (setq org-mobile-directory (concat dropbox-dir "orgmobile/")
-          org-mobile-inbox-for-pull (concat dropbox-dir "mobile-org/inbox.org")))
-  
-  (use-package org
-    :load-path ("~/git/org-mode/lisp" "~/git/org-mode/contrib/lisp")
-    :bind (("C-c a"   . org-agenda)
-           ("C-c C-w" . org-refile)
-           ("C-c c"   . org-capture))
-    :defer t
-    :config
-    (setq org-directory (concat dropbox-dir "org/"))
-    (let ((agenda-dir (concat org-directory "/agenda")))
-      ;; (setq bh/hide-scheduled-and-waiting-next-tasks t)
-      (setq org-agenda-files
-            (delq nil
-                  (mapcar (lambda (x) (and (file-exists-p x) x))
-                          (directory-files
-                           (expand-file-name agenda-dir) t org-agenda-file-regexp))))
-      (setq org-todo-keywords
-            (quote ((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d)")
-                    (sequence "WAITING(w@/!)" "HOLD(h@/!)" "|" "CANCELLED(c@/!)" "PHONE" "MEETING"))))
-      
-      (setq org-todo-keyword-faces
-            (quote (("TODO" :foreground "red" :weight bold)
-                    ("NEXT" :foreground "blue" :weight bold)
-                    ("DONE" :foreground "forest green" :weight bold)
-                    ("WAITING" :foreground "orange" :weight bold)
-                    ("HOLD" :foreground "magenta" :weight bold)
-                    ("CANCELLED" :foreground "forest green" :weight bold)
-                    ("MEETING" :foreground "forest green" :weight bold)
-                    ("PHONE" :foreground "forest green" :weight bold))))
-      (setq org-use-fast-todo-selection t)
-      (setq org-todo-state-tags-triggers
-            (quote (("CANCELLED" ("CANCELLED" . t))
-                    ("WAITING" ("WAITING" . t))
-                    ("HOLD" ("WAITING") ("HOLD" . t))
-                    (done ("WAITING") ("HOLD"))
-                    ("TODO" ("WAITING") ("CANCELLED") ("HOLD"))
-                    ("NEXT" ("WAITING") ("CANCELLED") ("HOLD"))
-                    ("DONE" ("WAITING") ("CANCELLED") ("HOLD")))))
-      
-      (setq org-default-notes-file (concat agenda-dir "/refile.org"))
-      (setq org-capture-templates
-            (quote (("t" "todo" entry (file (concat agenda-dir "/refile.org"))
-                     "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
-                    ("r" "respond" entry (file (concat agenda-dir "/refile.org"))
-                     "* NEXT Respond to %:from on %:subject\nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
-                    ("n" "note" entry (file (concat agenda-dir "/agenda/refile.org"))
-                     "* %? :NOTE:\n%U\n%a\n" :clock-in t :clock-resume t)
-                    ("j" "Journal" entry (file+datetree (concat agenda-dir "/diary.org"))
-                     "* %?\n%U\n" :clock-in t :clock-resume t)
-                    ("w" "org-protocol" entry (file (concat agenda-dir "/refile.org"))
-                     "* TODO Review %c\n%U\n" :immediate-finish t)
-                    ("m" "Meeting" entry (file (concat agenda-dir "/refile.org"))
-                     "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
-                    ("p" "Phone call" entry (file (concat agenda-dir "/refile.org"))
-                     "* PHONE %? :PHONE:\n%U" :clock-in t :clock-resume t)
-                    ("h" "Habit" entry (file (concat agenda-dir "/refile.org"))
-                     "* NEXT %?\n%U\n%a\nSCHEDULED: %(format-time-string \"%<<%Y-%m-%d %a .+1d/3d>>\")\n:PROPERTIES:\n:STYLE: habit\n:REPEAT_TO_STATE: NEXT\n:END:\n")))))
-    ;; (defun bh/remove-empty-drawer-on-clock-out ()
-    ;;   (interactive)
-    ;;   (save-excursion
-    ;;     (beginning-of-line 0)
-    ;;     (org-remove-empty-drawer-at "LOGBOOK" (point))))
-    
-    ;; (add-hook 'org-clock-out-hook 'bh/remove-empty-drawer-on-clock-out 'append)
-    ;; (setq org-refile-targets (quote ((nil :maxlevel . 9)
-    ;;                                  (org-agenda-files :maxlevel . 9))))
-    ;; ;; Do not dim blocked tasks
-    ;; (setq org-agenda-dim-blocked-tasks nil)
-    
-    ;; ;; Compact the block agenda view
-    ;; (setq org-agenda-compact-blocks t)
-    
-    ;; ;; Custom agenda command definitions
-    ;; (setq org-agenda-custom-commands
-    ;;       (quote (("N" "Notes" tags "NOTE"
-    ;;                ((org-agenda-overriding-header "Notes")
-    ;;                 (org-tags-match-list-sublevels t)))
-    ;;               ("h" "Habits" tags-todo "STYLE=\"habit\""
-    ;;                ((org-agenda-overriding-header "Habits")
-    ;;                 (org-agenda-sorting-strategy
-    ;;                  '(todo-state-down effort-up category-keep))))
-    ;;               (" " "Agenda"
-    ;;                ((agenda "" nil)
-    ;;                 (tags "REFILE"
-    ;;                       ((org-agenda-overriding-header "Tasks to Refile")
-    ;;                        (org-tags-match-list-sublevels nil)))
-    ;;                 (tags-todo "-CANCELLED/!"
-    ;;                            ((org-agenda-overriding-header "Stuck Projects")
-    ;;                             (org-agenda-skip-function 'bh/skip-non-stuck-projects)
-    ;;                             (org-agenda-sorting-strategy
-    ;;                              '(category-keep))))
-    ;;                 (tags-todo "-HOLD-CANCELLED/!"
-    ;;                            ((org-agenda-overriding-header "Projects")
-    ;;                             (org-agenda-skip-function 'bh/skip-non-projects)
-    ;;                             (org-tags-match-list-sublevels 'indented)
-    ;;                             (org-agenda-sorting-strategy
-    ;;                              '(category-keep))))
-    ;;                 (tags-todo "-CANCELLED/!NEXT"
-    ;;                            ((org-agenda-overriding-header (concat "Project Next Tasks"
-    ;;                                                                   (if bh/hide-scheduled-and-waiting-next-tasks
-    ;;                                                                       ""
-    ;;                                                                     " (including WAITING and SCHEDULED tasks)")))
-    ;;                             (org-agenda-skip-function 'bh/skip-projects-and-habits-and-single-tasks)
-    ;;                             (org-tags-match-list-sublevels t)
-    ;;                             (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-sorting-strategy
-    ;;                              '(todo-state-down effort-up category-keep))))
-    ;;                 (tags-todo "-REFILE-CANCELLED-WAITING-HOLD/!"
-    ;;                            ((org-agenda-overriding-header (concat "Project Subtasks"
-    ;;                                                                   (if bh/hide-scheduled-and-waiting-next-tasks
-    ;;                                                                       ""
-    ;;                                                                     " (including WAITING and SCHEDULED tasks)")))
-    ;;                             (org-agenda-skip-function 'bh/skip-non-project-tasks)
-    ;;                             (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-sorting-strategy
-    ;;                              '(category-keep))))
-    ;;                 (tags-todo "-REFILE-CANCELLED-WAITING-HOLD/!"
-    ;;                            ((org-agenda-overriding-header (concat "Standalone Tasks"
-    ;;                                                                   (if bh/hide-scheduled-and-waiting-next-tasks
-    ;;                                                                       ""
-    ;;                                                                     " (including WAITING and SCHEDULED tasks)")))
-    ;;                             (org-agenda-skip-function 'bh/skip-project-tasks)
-    ;;                             (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-sorting-strategy
-    ;;                              '(category-keep))))
-    ;;                 (tags-todo "-CANCELLED+WAITING|HOLD/!"
-    ;;                            ((org-agenda-overriding-header (concat "Waiting and Postponed Tasks"
-    ;;                                                                   (if bh/hide-scheduled-and-waiting-next-tasks
-    ;;                                                                       ""
-    ;;                                                                     " (including WAITING and SCHEDULED tasks)")))
-    ;;                             (org-agenda-skip-function 'bh/skip-non-tasks)
-    ;;                             (org-tags-match-list-sublevels nil)
-    ;;                             (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
-    ;;                             (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)))
-    ;;                 (tags "-REFILE/"
-    ;;                       ((org-agenda-overriding-header "Tasks to Archive")
-    ;;                        (org-agenda-skip-function 'bh/skip-non-archivable-tasks)
-    ;;                        (org-tags-match-list-sublevels nil))))
-    ;;                nil))))
-    ;; (defun bh/org-auto-exclude-function (tag)
-    ;;   "Automatic task exclusion in the agenda with / RET"
-    ;;   (and (cond
-    ;;         ((string= tag "hold")
-    ;;          t)
-    ;;         ((string= tag "farm")
-    ;;          t))
-    ;;        (concat "-" tag)))
-    
-    ;; (setq org-agenda-auto-exclude-function 'bh/org-auto-exclude-function)
-    ;; ;;
-    ;; ;; Resume clocking task when emacs is restarted
-    ;; (org-clock-persistence-insinuate)
-    ;; ;;
-    ;; ;; Show lot of clocking history so it's easy to pick items off the C-F11 list
-    ;; (setq org-clock-history-length 23)
-    ;; ;; Resume clocking task on clock-in if the clock is open
-    ;; (setq org-clock-in-resume t)
-    ;; ;; Change tasks to NEXT when clocking in
-    ;; (setq org-clock-in-switch-to-state 'bh/clock-in-to-next)
-    ;; ;; Separate drawers for clocking and logs
-    ;; (setq org-drawers (quote ("PROPERTIES" "LOGBOOK")))
-    ;; ;; Save clock data and state changes and notes in the LOGBOOK drawer
-    ;; (setq org-clock-into-drawer t)
-    ;; ;; Sometimes I change tasks I'm clocking quickly - this removes clocked tasks with 0:00 duration
-    ;; (setq org-clock-out-remove-zero-time-clocks t)
-    ;; ;; Clock out when moving task to a done state
-    ;; (setq org-clock-out-when-done t)
-    ;; ;; Save the running clock and all clock history when exiting Emacs, load it on startup
-    ;; (setq org-clock-persist t)
-    ;; ;; Do not prompt to resume an active clock
-    ;; (setq org-clock-persist-query-resume nil)
-    ;; ;; Enable auto clock resolution for finding open clocks
-    ;; (setq org-clock-auto-clock-resolution (quote when-no-clock-is-running))
-    ;; ;; Include current clocking task in clock reports
-    ;; (setq org-clock-report-include-clocking-task t)
-    
-    ;; (setq bh/keep-clock-running nil)
-    
-    ;; (defun bh/clock-in-to-next (kw)
-    ;;   "Switch a task from TODO to NEXT when clocking in.
-    ;;   Skips capture tasks, projects, and subprojects.
-    ;;   Switch projects and subprojects from NEXT back to TODO"
-    ;;   (when (not (and (boundp 'org-capture-mode) org-capture-mode))
-    ;;     (cond
-    ;;      ((and (member (org-get-todo-state) (list "TODO"))
-    ;;            (bh/is-task-p))
-    ;;       "NEXT")
-    ;;      ((and (member (org-get-todo-state) (list "NEXT"))
-    ;;            (bh/is-project-p))
-    ;;       "TODO"))))
-    
-    ;; (defun bh/find-project-task ()
-    ;;   "Move point to the parent (project) task if any"
-    ;;   (save-restriction
-    ;;     (widen)
-    ;;     (let ((parent-task (save-excursion (org-back-to-heading 'invisible-ok) (point))))
-    ;;       (while (org-up-heading-safe)
-    ;;         (when (member (nth 2 (org-heading-components)) org-todo-keywords-1)
-    ;;           (setq parent-task (point))))
-    ;;       (goto-char parent-task)
-    ;;       parent-task)))
-    
-    ;; (defun bh/punch-in (arg)
-    ;;   "Start continuous clocking and set the default task to the
-    ;;   selected task.  If no task is selected set the Organization task
-    ;;   as the default task."
-    ;;   (interactive "p")
-    ;;   (setq bh/keep-clock-running t)
-    ;;   (if (equal major-mode 'org-agenda-mode)
-    ;;       ;;
-    ;;       ;; We're in the agenda
-    ;;       ;;
-    ;;       (let* ((marker (org-get-at-bol 'org-hd-marker))
-    ;;              (tags (org-with-point-at marker (org-get-tags-at))))
-    ;;         (if (and (eq arg 4) tags)
-    ;;             (org-agenda-clock-in '(16))
-    ;;           (bh/clock-in-organization-task-as-default)))
-    ;;     ;;
-    ;;     ;; We are not in the agenda
-    ;;     ;;
-    ;;     (save-restriction
-    ;;       (widen)
-    ;;                                       ; Find the tags on the current task
-    ;;       (if (and (equal major-mode 'org-mode) (not (org-before-first-heading-p)) (eq arg 4))
-    ;;           (org-clock-in '(16))
-    ;;         (bh/clock-in-organization-task-as-default)))))
-    
-    ;; (defun bh/punch-out ()
-    ;;   (interactive)
-    ;;   (setq bh/keep-clock-running nil)
-    ;;   (when (org-clock-is-active)
-    ;;     (org-clock-out))
-    ;;   (org-agenda-remove-restriction-lock))
-    
-    ;; (defun bh/clock-in-default-task ()
-    ;;   (save-excursion
-    ;;     (org-with-point-at org-clock-default-task
-    ;;       (org-clock-in))))
-    
-    ;; (defun bh/clock-in-parent-task ()
-    ;;   "Move point to the parent (project) task if any and clock in"
-    ;;   (let ((parent-task))
-    ;;     (save-excursion
-    ;;       (save-restriction
-    ;;         (widen)
-    ;;         (while (and (not parent-task) (org-up-heading-safe))
-    ;;           (when (member (nth 2 (org-heading-components)) org-todo-keywords-1)
-    ;;             (setq parent-task (point))))
-    ;;         (if parent-task
-    ;;             (org-with-point-at parent-task
-    ;;               (org-clock-in))
-    ;;           (when bh/keep-clock-running
-    ;;             (bh/clock-in-default-task)))))))
-    
-    ;; (defvar bh/organization-task-id "eb155a82-92b2-4f25-a3c6-0304591af2f9")
-    
-    ;; (defun bh/clock-in-organization-task-as-default ()
-    ;;   (interactive)
-    ;;   (org-with-point-at (org-id-find bh/organization-task-id 'marker)
-    ;;     (org-clock-in '(16))))
-    
-    ;; (defun bh/clock-out-maybe ()
-    ;;   (when (and bh/keep-clock-running
-    ;;              (not org-clock-clocking-in)
-    ;;              (marker-buffer org-clock-default-task)
-    ;;              (not org-clock-resolving-clocks-due-to-idleness))
-    ;;     (bh/clock-in-parent-task)))
-    
-    ;; (add-hook 'org-clock-out-hook 'bh/clock-out-maybe 'append)
-    ;; (require 'org-id)
-    ;; (defun bh/clock-in-task-by-id (id)
-    ;;   "Clock in a task by id"
-    ;;   (org-with-point-at (org-id-find id 'marker)
-    ;;     (org-clock-in nil)))
-    
-    ;; (defun bh/clock-in-last-task (arg)
-    ;;   "Clock in the interrupted task if there is one
-    ;;   Skip the default task and get the next one.
-    ;;   A prefix arg forces clock in of the default task."
-    ;;   (interactive "p")
-    ;;   (let ((clock-in-to-task
-    ;;          (cond
-    ;;           ((eq arg 4) org-clock-default-task)
-    ;;           ((and (org-clock-is-active)
-    ;;                 (equal org-clock-default-task (cadr org-clock-history)))
-    ;;            (caddr org-clock-history))
-    ;;           ((org-clock-is-active) (cadr org-clock-history))
-    ;;           ((equal org-clock-default-task (car org-clock-history)) (cadr org-clock-history))
-    ;;           (t (car org-clock-history)))))
-    ;;     (widen)
-    ;;     (org-with-point-at clock-in-to-task
-    ;;       (org-clock-in nil))))
-    
-    ;; (setq org-agenda-clock-consistency-checks
-    ;;       (quote (:max-duration "4:00"
-    ;;                             :min-duration 0
-    ;;                             :max-gap 0
-    ;;                             :gap-ok-around ("4:00"))))
-    
-    ;; (setq org-clock-out-remove-zero-time-clocks t)
-    
-    ;; ;; Agenda clock report parameters
-    ;; (setq org-agenda-clockreport-parameter-plist
-    ;;       (quote (:link t :maxlevel 5 :fileskip0 t :compact t :narrow 80)))
-    ;; ;; Agenda log mode items to display (closed and state changes by default)
-    ;; (setq org-agenda-log-mode-items (quote (closed state)))
-    
-    ;;                                       ; Tags with fast selection keys
-    (setq org-tag-alist (quote ((:startgroup)
-                                ("@errand" . ?e)
-                                ("@office" . ?o)
-                                ("@home" . ?H)
-                                ("@farm" . ?f)
-                                (:endgroup)
-                                ("WAITING" . ?w)
-                                ("HOLD" . ?h)
-                                ("PERSONAL" . ?P)
-                                ("WORK" . ?W)
-                                ("FARM" . ?F)
-                                ("ORG" . ?O)
-                                ("NORANG" . ?N)
-                                ("crypt" . ?E)
-                                ("NOTE" . ?n)
-                                ("CANCELLED" . ?c)
-                                ("FLAGGED" . ??))))
-    
-    ;;                                       ; Allow setting single tags without the menu
-    ;; (setq org-fast-tag-selection-single-key (quote expert))
-    
-    ;;                                       ; For tag searches ignore tasks with scheduled and deadline dates
-    ;; (setq org-agenda-tags-todo-honor-ignore-options t)
-    
-    ;; (defun bh/clock-in-task-by-id (id)
-    ;;   "Clock in a task by id"
-    ;;   (org-with-point-at (org-id-find id 'marker)
-    ;;     (org-clock-in nil)))
-    
-    ;; (defun bh/clock-in-last-task (arg)
-    ;;   "Clock in the interrupted task if there is one
-    ;;   Skip the default task and get the next one.
-    ;;   A prefix arg forces clock in of the default task."
-    ;;   (interactive "p")
-    ;;   (let ((clock-in-to-task
-    ;;          (cond
-    ;;           ((eq arg 4) org-clock-default-task)
-    ;;           ((and (org-clock-is-active)
-    ;;                 (equal org-clock-default-task (cadr org-clock-history)))
-    ;;            (caddr org-clock-history))
-    ;;           ((org-clock-is-active) (cadr org-clock-history))
-    ;;           ((equal org-clock-default-task (car org-clock-history)) (cadr org-clock-history))
-    ;;           (t (car org-clock-history)))))
-    ;;     (widen)
-    ;;     (org-with-point-at clock-in-to-task
-    ;;       (org-clock-in nil))))
-  
-    ;;   (setq org-time-stamp-rounding-minutes (quote (1 1)))
-    ;;   (setq org-agenda-clock-consistency-checks
-    ;;         (quote (:max-duration "4:00"
-    ;;                               :min-duration 0
-    ;;                               :max-gap 0
-    ;;                               :gap-ok-around ("4:00"))))
-    ;;   (setq org-clock-out-remove-zero-time-clocks t)
-  
-    ;;   (setq org-agenda-clockreport-parameter-plist
-    ;;         (quote (:link t :maxlevel 5 :fileskip0 t :compact t :narrow 80)))
-      
-    ;;   (setq org-columns-default-format "%80ITEM(Task) %10Effort(Effort){:} %10CLOCKSUM")
-  
-      
-    ;;   (setq org-global-properties (quote (("Effort_ALL" . "0:15 0:30 0:45 1:00 2:00 3:00 4:00 5:00 6:00 0:00")
-    ;;                                       ("STYLE_ALL" . "habit"))))
-    )
+(use-package org
+  :init (setq org-directory (concat dropbox-dir "org/")
+	      agenda-dir (concat org-directory "agenda/"))
+  :load-path ("~/git/org-mode/lisp" "~/git/org-mode/contrib/lisp")
+  :bind (("C-c a"     . org-agenda)
+         ("C-c C-w"   . org-refile)
+         ("C-c c"     . org-capture)
+	 ("C-c b"     . org-iswitchb)
+	 ;; Bernt Hansen's keys.
+	 ("<f12>"     . org-agenda)
+	 ("<f5>"      . bh/org-todo)
+	 ("<S-f5>"    . bh/widen)
+	 ("<f7>"      . bh/set-truncate-lines)
+	 ("<f8>"      . org-cycle-agenda-files)
+	 ("<f9> <f9>" . bh/show-org-agenda)
+	 ("<f9> b"    . bbdb)
+	 ("<f9> c"    . calendar)
+	 ("<f9> f"    . boxquote-insert-file)
+	 ("<f9> g"    . gnus)
+	 ("<f9> h"    . bh/hide-other)
+	 ("<f9> n"    . bh/toggle-next-task-display)
+	 ("<f9> I"    . bh/punch-in)
+	 ("<f9> O"    . bh/punch-out)
+	 ("<f9> o"    . bh/make-org-scratch)
+	 ("<f9> r"    . boxquote-region)
+	 ("<f9> s"    . bh/switch-to-scratch)
+	 ("<f9> t"    . bh/insert-inactive-timestamp)
+	 ("<f9> T"    . bh/toggle-insert-inactive-timestamp)
+	 ("<f9> v"    . visible-mode)
+	 ("<f9> l"    . org-toggle-link-display)
+	 ("<f9> SPC"  . bh/clock-in-last-task)
+	 ("C-<f9>"    . previous-buffer)
+	 ("M-<f9>"    . org-toggle-inline-images)
+	 ("C-x n r"   . narrow-to-region)
+	 ("C-<f10>"   . next-buffer)
+	 ("<f11>"     . org-clock-goto)
+	 ("C-<f11>"   . org-clock-in)
+	 ("C-s-<f12>" . bh/save-then-publish)
+	 ("C-c c"     . org-capture))
+  :defer t
+  :config
+  (let ((bh-org-mode-file (expand-file-name "~/.emacs.d/org-mode.org")))
+    (setq org-agenda-files
+          (delq nil
+                (mapcar (lambda (x) (and (file-exists-p x) x))
+                        (directory-files
+                         (expand-file-name agenda-dir) t org-agenda-file-regexp))))
+    ;; load org config
+    (if (file-exists-p bh-org-mode-file)
+	(org-babel-load-file bh-org-mode-file))))
+
+(use-package org-id)
+
+(use-package org-habit)
+
+(use-package org-mobile
+  :config
+  (setq org-mobile-directory (concat dropbox-dir "orgmobile/")
+        org-mobile-inbox-for-pull (concat dropbox-dir "mobile-org/inbox.org")))
+
 #+end_src
 
 #+RESULTS:
@@ -1088,6 +764,8 @@ smart-modeline-respectful, /etc/.
     (blink-cursor-mode 1)
     ;; maybe it's a bad idea to put this here.
     (custom-set-faces
+     '(org-mode-line-clock ((t (:foreground "red" :box (:line-width -1 :style released-button)))) t)
+     '(org-mode-line-clock ((t (:background "grey75" :foreground "red" :box (:line-width -1 :style released-button)))) t)
      '(font-lock-comment-face ((t (:foreground "gray38" :slant italic))))
      '(default ((t (:inherit nil :stipple nil :background "#3F3F3F" :foreground "#DCDCCC" :inverse-video nil :box nil :strike-through nil :overline nil :underline nil :slant normal :weight medium :height 100 :width medium :foundry "PfEd" :family "Source Code Pro"))))))
 #+end_src
@@ -1379,7 +1057,7 @@ Yet another [[http://emacsredux.com/blog/2013/03/30/kill-other-buffers/][gold nu
     :bind ("C-x j c" . jabber-connect-all)
     :config
     (setq jabber-account-list
-          '((""
+          '(("shfengoli@gmail.com"
              (:network-server . "talk.google.com")
              (:port . 5222)
              (:connection-type . starttls)))))
